// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColorItem > Render > renders correctly in HSL mode 1`] = `
<div>
  <div
    data-overlay-container="true"
  >
    <div
      aria-current="true"
      class="flex flex-col p-4 rounded-xl bg-default-100"
      data-testid="ColorItem"
      id="test-uuid-1"
      role="presentation"
    >
      <div
        class="flex items-start gap-2"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="Color picker"
          class="shrink-0 bg-(--gamut-bg-oklch) gamut-srgb:bg-(--gamut-bg-hex) size-16 rounded-large z-10 subpixel-antialiased aria-expanded:opacity-100 aria-expanded:scale-[1] cursor-pointer"
          data-color="oklch(63.27% 0.254 19.9)"
          data-react-aria-pressable="true"
          data-slot="trigger"
          data-testid="ColorBox"
          style="--gamut-bg-oklch: oklch(63.27% 0.254 19.9); --gamut-bg-hex: #ff0044;"
          tabindex="0"
          type="button"
        />
        <div
          class="w-full space-y-2"
        >
          <div
            class="flex items-center gap-1"
          >
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_8px)] is-filled"
              data-filled="true"
              data-filled-within="true"
              data-has-value="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="w-full inline-flex tap-highlight-transparent flex-row items-center gap-3 !px-1 !pb-0 !gap-0 relative box-border shadow-[0_1px_0px_0_rgba(0,0,0,0.05)] border-default-200 !rounded-none hover:border-default-300 after:content-[''] after:w-0 after:origin-center after:bg-default-foreground after:absolute after:left-1/2 after:-translate-x-1/2 after:-bottom-[2px] after:h-[2px] group-data-[focus=true]:after:w-full px-2 rounded-small transition-none h-6 min-h-6 is-filled"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <div
                    class="inline-flex w-full items-center h-full box-border pb-0"
                    data-slot="inner-wrapper"
                  >
                    <input
                      aria-label="Color name"
                      class="w-full bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text dark:autofill:[-webkit-text-fill-color:hsl(var(--heroui-foreground))] [&::-ms-reveal]:hidden transition-none group-data-[has-value=true]:text-foreground text-base font-semibold text-foreground-800 is-filled"
                      data-filled="true"
                      data-filled-within="true"
                      data-slot="input"
                      id="react-aria-_r_u_"
                      name="color-name-0"
                      tabindex="0"
                      title=""
                      type="text"
                      value="Primary"
                    />
                  </div>
                </div>
              </div>
            </div>
            <button
              aria-label="Remove color"
              class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 h-6 text-tiny gap-1 rounded-small px-0 min-w-6 w-6"
              data-react-aria-pressable="true"
              tabindex="0"
              type="button"
            >
              <svg
                class="text-base"
                fill="currentColor"
                height="1em"
                viewBox="0 0 256 256"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M216,48H176V40a24,24,0,0,0-24-24H104A24,24,0,0,0,80,40v8H40a8,8,0,0,0,0,16h8V208a16,16,0,0,0,16,16H192a16,16,0,0,0,16-16V64h8a8,8,0,0,0,0-16ZM96,40a8,8,0,0,1,8-8h48a8,8,0,0,1,8,8v8H96Zm96,168H64V64H192ZM112,104v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Zm48,0v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Z"
                />
              </svg>
            </button>
          </div>
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
            data-filled="true"
            data-filled-within="true"
            data-has-value="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 group-data-[focus=true]:border-default-foreground group-data-[focus=true]:data-[hover=true]:border-default-foreground rounded-medium !duration-150 transition-colors motion-reduce:transition-none h-8 min-h-8 px-2 is-filled"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Color value"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text dark:autofill:[-webkit-text-fill-color:hsl(var(--heroui-foreground))] [&::-ms-reveal]:hidden text-small is-filled"
                    data-filled="true"
                    data-filled-within="true"
                    data-slot="input"
                    data-type="text"
                    id="react-aria-_r_15_"
                    tabindex="0"
                    title=""
                    type="text"
                    value="#ff0044"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="height: auto; opacity: 1;"
      >
        <div
          class="flex flex-col mt-3 gap-2"
        >
          <div
            class="flex flex-col gap-2"
            data-testid="ChannelSliders"
          >
            <div
              class="flex items-center gap-2"
              data-testid="HueSlider"
            >
              H
              <div
                class="flex-1 py-1"
              >
                <div
                  class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
                  style="background: linear-gradient(to right, rgb(255, 0, 0), rgb(255, 255, 0), rgb(0, 255, 0), rgb(0, 255, 255), rgb(0, 0, 255), rgb(255, 0, 255), rgb(255, 0, 0)); touch-action: none;"
                >
                  <input
                    aria-label="Hue"
                    aria-orientation="horizontal"
                    aria-valuemax="359.9"
                    aria-valuemin="0"
                    aria-valuenow="344"
                    class="peer absolute h-px w-px overflow-hidden whitespace-nowrap border-0 p-0 m-[-1px] [clip:rect(0,0,0,0)]"
                    max="359.9"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="344"
                  />
                  <div
                    aria-hidden="true"
                    class="absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform cursor-grab peer-disabled:cursor-not-allowed peer-focus-visible:ring-1 peer-focus-visible:ring-black dark:peer-focus-visible:ring-white before:content-[''] before:absolute before:-inset-2 before:rounded-full"
                    data-testid="GradientSliderThumb"
                    style="left: calc(95.582% - 19.116px);"
                  />
                </div>
              </div>
              <div
                class="flex items-center"
                data-testid="NumericInput"
              >
                <input
                  aria-label="Hue"
                  class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
                  type="text"
                  value="344"
                />
                <span
                  class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
                >
                  °
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-2"
              data-testid="SaturationSlider"
            >
              <button
                aria-expanded="false"
                aria-label="Saturation Override"
                class="inline-flex shrink-0 text-base"
                disabled=""
                type="button"
              >
                S
              </button>
              <div
                class="flex-1 py-1"
              >
                <div
                  class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
                  style="background: linear-gradient(to right, rgb(128, 128, 128), rgb(255, 0, 68)); touch-action: none;"
                >
                  <input
                    aria-label="Saturation"
                    aria-orientation="horizontal"
                    aria-valuemax="100"
                    aria-valuemin="0"
                    aria-valuenow="100"
                    class="peer absolute h-px w-px overflow-hidden whitespace-nowrap border-0 p-0 m-[-1px] [clip:rect(0,0,0,0)]"
                    max="100"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="100"
                  />
                  <div
                    aria-hidden="true"
                    class="absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform cursor-grab peer-disabled:cursor-not-allowed peer-focus-visible:ring-1 peer-focus-visible:ring-black dark:peer-focus-visible:ring-white before:content-[''] before:absolute before:-inset-2 before:rounded-full"
                    data-testid="GradientSliderThumb"
                    style="left: calc(100% - 20px);"
                  />
                </div>
              </div>
              <div
                class="flex items-center"
                data-testid="NumericInput"
              >
                <input
                  aria-label="Saturation"
                  class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
                  type="text"
                  value="100"
                />
                <span
                  class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
                >
                  %
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-2"
              data-testid="LightnessSlider"
            >
              L
              <div
                class="flex-1 py-1"
              >
                <div
                  class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
                  style="background: linear-gradient(to right, rgb(0, 0, 0), rgb(255, 0, 68), rgb(255, 255, 255)); touch-action: none;"
                >
                  <input
                    aria-label="Lightness"
                    aria-orientation="horizontal"
                    aria-valuemax="100"
                    aria-valuemin="0"
                    aria-valuenow="50"
                    class="peer absolute h-px w-px overflow-hidden whitespace-nowrap border-0 p-0 m-[-1px] [clip:rect(0,0,0,0)]"
                    max="100"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="50"
                  />
                  <div
                    aria-hidden="true"
                    class="absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform cursor-grab peer-disabled:cursor-not-allowed peer-focus-visible:ring-1 peer-focus-visible:ring-black dark:peer-focus-visible:ring-white before:content-[''] before:absolute before:-inset-2 before:rounded-full"
                    data-testid="GradientSliderThumb"
                    style="left: calc(50% - 10px);"
                  />
                </div>
              </div>
              <div
                class="flex items-center"
                data-testid="NumericInput"
              >
                <input
                  aria-label="Lightness"
                  class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
                  type="text"
                  value="50"
                />
                <span
                  class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
                >
                  %
                </span>
              </div>
            </div>
          </div>
          <style>
            
      .popover-content-0 { background-color: oklch(63.27% 0.254 19.9); }
      .popover-base-0 {
        &:before {
          background-color: oklch(63.27% 0.254 19.9);
        }
       }
      
          </style>
          <div
            class="flex items-center justify-between"
          >
            <div
              class="flex items-center"
              data-testid="ModeSelector"
            >
              <button
                aria-label="Switch to OKLCH"
                aria-pressed="false"
                class="flex items-center justify-center outline-none bg-black/10 dark:bg-white/10 hover:bg-black/15 dark:hover:bg-white/15 focus-visible:ring-2 focus:ring-black/30 dark:focus:ring-white/30 h-8 px-3 text-xs leading-none first:rounded-l-sm last:rounded-r-sm text-neutral-900 dark:text-neutral-50 focus-visible:relative focus-visible:z-10"
                type="button"
              >
                OKLCH
              </button>
              <button
                aria-label="Switch to HSL"
                aria-pressed="true"
                class="flex items-center justify-center outline-none hover:bg-black/15 dark:hover:bg-white/15 focus-visible:ring-2 focus:ring-black/30 dark:focus:ring-white/30 h-8 px-3 text-xs leading-none first:rounded-l-sm last:rounded-r-sm text-neutral-900 dark:text-neutral-50 focus-visible:relative focus-visible:z-10 bg-black/20 dark:bg-white/20"
                type="button"
              >
                HSL
              </button>
              <button
                aria-label="Switch to RGB"
                aria-pressed="false"
                class="flex items-center justify-center outline-none bg-black/10 dark:bg-white/10 hover:bg-black/15 dark:hover:bg-white/15 focus-visible:ring-2 focus:ring-black/30 dark:focus:ring-white/30 h-8 px-3 text-xs leading-none first:rounded-l-sm last:rounded-r-sm text-neutral-900 dark:text-neutral-50 focus-visible:relative focus-visible:z-10"
                type="button"
              >
                RGB
              </button>
            </div>
            <div
              class="flex items-center gap-1"
            >
              <button
                aria-label="View Live Preview"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 h-8 text-small gap-2 rounded-medium px-0 min-w-8 w-8"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                <svg
                  class="text-lg"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 256 256"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M247.31,124.76c-.35-.79-8.82-19.58-27.65-38.41C194.57,61.26,162.88,48,128,48S61.43,61.26,36.34,86.35C17.51,105.18,9,124,8.69,124.76a8,8,0,0,0,0,6.5c.35.79,8.82,19.57,27.65,38.4C61.43,194.74,93.12,208,128,208s66.57-13.26,91.66-38.34c18.83-18.83,27.3-37.61,27.65-38.4A8,8,0,0,0,247.31,124.76ZM128,192c-30.78,0-57.67-11.19-79.93-33.25A133.47,133.47,0,0,1,25,128,133.33,133.33,0,0,1,48.07,97.25C70.33,75.19,97.22,64,128,64s57.67,11.19,79.93,33.25A133.46,133.46,0,0,1,231.05,128C223.84,141.46,192.43,192,128,192Zm0-112a48,48,0,1,0,48,48A48.05,48.05,0,0,0,128,80Zm0,80a32,32,0,1,1,32-32A32,32,0,0,1,128,160Z"
                  />
                </svg>
              </button>
              <button
                aria-label="Random color"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 min-w-8 w-8 h-8"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                <svg
                  class="text-base"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 256 256"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M224,48V96a8,8,0,0,1-8,8H168a8,8,0,0,1,0-16h28.69L182.06,73.37a79.56,79.56,0,0,0-56.13-23.43h-.45A79.52,79.52,0,0,0,69.59,72.71,8,8,0,0,1,58.41,61.27a96,96,0,0,1,135,.79L208,76.69V48a8,8,0,0,1,16,0ZM186.41,183.29a80,80,0,0,1-112.47-.66L59.31,168H88a8,8,0,0,0,0-16H40a8,8,0,0,0-8,8v48a8,8,0,0,0,16,0V179.31l14.63,14.63A95.43,95.43,0,0,0,130,222.06h.53a95.36,95.36,0,0,0,67.07-27.33,8,8,0,0,0-11.18-11.44Z"
                  />
                </svg>
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="dialog"
                aria-label="Change color options"
                class="group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 min-w-8 w-8 h-8 z-10 aria-expanded:scale-[0.97] aria-expanded:opacity-70 subpixel-antialiased"
                data-react-aria-pressable="true"
                data-slot="trigger"
                tabindex="0"
                type="button"
              >
                <span
                  class="size-8 inline-flex items-center justify-center"
                >
                  <div
                    class="relative inline-flex shrink-0"
                  >
                    <svg
                      class="text-base"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 256 256"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M40,88H73a32,32,0,0,0,62,0h81a8,8,0,0,0,0-16H135a32,32,0,0,0-62,0H40a8,8,0,0,0,0,16Zm64-24A16,16,0,1,1,88,80,16,16,0,0,1,104,64ZM216,168H199a32,32,0,0,0-62,0H40a8,8,0,0,0,0,16h97a32,32,0,0,0,62,0h17a8,8,0,0,0,0-16Zm-48,24a16,16,0,1,1,16-16A16,16,0,0,1,168,192Z"
                      />
                    </svg>
                    <span
                      class="flex z-10 flex-wrap absolute box-border rounded-full whitespace-nowrap place-content-center origin-center items-center select-none font-regular scale-100 opacity-100 subpixel-antialiased data-[invisible=true]:scale-0 data-[invisible=true]:opacity-0 transition-transform-opacity !ease-soft-spring !duration-300 border-transparent border-0 bg-secondary text-secondary-foreground top-[5%] right-[5%] translate-x-1/2 -translate-y-1/2 w-2.5 h-2.5 min-w-2.5 min-h-2.5"
                      data-invisible="true"
                    />
                  </div>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorItem > Render > renders correctly in OKLCH mode 1`] = `
<div>
  <div
    data-overlay-container="true"
  >
    <div
      aria-current="true"
      class="flex flex-col p-4 rounded-xl bg-default-100"
      data-testid="ColorItem"
      id="test-uuid-1"
      role="presentation"
    >
      <div
        class="flex items-start gap-2"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="Color picker"
          class="shrink-0 bg-(--gamut-bg-oklch) gamut-srgb:bg-(--gamut-bg-hex) size-16 rounded-large z-10 subpixel-antialiased aria-expanded:opacity-100 aria-expanded:scale-[1] cursor-pointer"
          data-color="oklch(63.27% 0.254 19.9)"
          data-react-aria-pressable="true"
          data-slot="trigger"
          data-testid="ColorBox"
          style="--gamut-bg-oklch: oklch(63.27% 0.254 19.9); --gamut-bg-hex: #ff0044;"
          tabindex="0"
          type="button"
        />
        <div
          class="w-full space-y-2"
        >
          <div
            class="flex items-center gap-1"
          >
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_8px)] is-filled"
              data-filled="true"
              data-filled-within="true"
              data-has-value="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="w-full inline-flex tap-highlight-transparent flex-row items-center gap-3 !px-1 !pb-0 !gap-0 relative box-border shadow-[0_1px_0px_0_rgba(0,0,0,0.05)] border-default-200 !rounded-none hover:border-default-300 after:content-[''] after:w-0 after:origin-center after:bg-default-foreground after:absolute after:left-1/2 after:-translate-x-1/2 after:-bottom-[2px] after:h-[2px] group-data-[focus=true]:after:w-full px-2 rounded-small transition-none h-6 min-h-6 is-filled"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <div
                    class="inline-flex w-full items-center h-full box-border pb-0"
                    data-slot="inner-wrapper"
                  >
                    <input
                      aria-label="Color name"
                      class="w-full bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text dark:autofill:[-webkit-text-fill-color:hsl(var(--heroui-foreground))] [&::-ms-reveal]:hidden transition-none group-data-[has-value=true]:text-foreground text-base font-semibold text-foreground-800 is-filled"
                      data-filled="true"
                      data-filled-within="true"
                      data-slot="input"
                      id="react-aria-_r_2_"
                      name="color-name-0"
                      tabindex="0"
                      title=""
                      type="text"
                      value="Primary"
                    />
                  </div>
                </div>
              </div>
            </div>
            <button
              aria-label="Remove color"
              class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 h-6 text-tiny gap-1 rounded-small px-0 min-w-6 w-6"
              data-react-aria-pressable="true"
              tabindex="0"
              type="button"
            >
              <svg
                class="text-base"
                fill="currentColor"
                height="1em"
                viewBox="0 0 256 256"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M216,48H176V40a24,24,0,0,0-24-24H104A24,24,0,0,0,80,40v8H40a8,8,0,0,0,0,16h8V208a16,16,0,0,0,16,16H192a16,16,0,0,0,16-16V64h8a8,8,0,0,0,0-16ZM96,40a8,8,0,0,1,8-8h48a8,8,0,0,1,8,8v8H96Zm96,168H64V64H192ZM112,104v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Zm48,0v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Z"
                />
              </svg>
            </button>
          </div>
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
            data-filled="true"
            data-filled-within="true"
            data-has-value="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 group-data-[focus=true]:border-default-foreground group-data-[focus=true]:data-[hover=true]:border-default-foreground rounded-medium !duration-150 transition-colors motion-reduce:transition-none h-8 min-h-8 px-2 is-filled"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Color value"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text dark:autofill:[-webkit-text-fill-color:hsl(var(--heroui-foreground))] [&::-ms-reveal]:hidden text-small is-filled"
                    data-filled="true"
                    data-filled-within="true"
                    data-slot="input"
                    data-type="text"
                    id="react-aria-_r_9_"
                    tabindex="0"
                    title=""
                    type="text"
                    value="oklch(63.27% 0.254 19.9)"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="height: auto; opacity: 1;"
      >
        <div
          class="flex flex-col mt-3 gap-2"
        >
          <div
            class="flex flex-col gap-2"
            data-testid="ChannelSliders"
          >
            <div
              class="flex items-center gap-2"
              data-testid="LightnessSlider"
            >
              L
              <div
                class="flex-1 py-1"
              >
                <div
                  class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
                  style="background: linear-gradient(to right, oklch(0 0.254 19.9), oklch(0.6327 0.254 19.9), oklch(1 0.254 19.9)); touch-action: none;"
                >
                  <input
                    aria-label="Lightness"
                    aria-orientation="horizontal"
                    aria-valuemax="1"
                    aria-valuemin="0"
                    aria-valuenow="0.6327"
                    class="peer absolute h-px w-px overflow-hidden whitespace-nowrap border-0 p-0 m-[-1px] [clip:rect(0,0,0,0)]"
                    max="1"
                    min="0"
                    step="0.001"
                    tabindex="0"
                    type="range"
                    value="0.6327"
                  />
                  <div
                    aria-hidden="true"
                    class="absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform cursor-grab peer-disabled:cursor-not-allowed peer-focus-visible:ring-1 peer-focus-visible:ring-black dark:peer-focus-visible:ring-white before:content-[''] before:absolute before:-inset-2 before:rounded-full"
                    data-testid="GradientSliderThumb"
                    style="left: calc(63.27% - 12.654px);"
                  />
                </div>
              </div>
              <div
                class="flex items-center"
                data-testid="NumericInput"
              >
                <input
                  aria-label="Lightness"
                  class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
                  type="text"
                  value="63.3"
                />
                <span
                  class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
                >
                  %
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-2"
              data-testid="ChromaSlider"
            >
              <button
                aria-expanded="false"
                aria-label="Saturation Override"
                class="inline-flex shrink-0 text-base"
                disabled=""
                type="button"
              >
                C
              </button>
              <div
                class="flex-1 py-1"
              >
                <div
                  class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
                  style="background: linear-gradient(to right, oklch(0.6327 0 19.9), oklch(0.6327 0.28643 19.9)); touch-action: none;"
                >
                  <input
                    aria-label="Chroma"
                    aria-orientation="horizontal"
                    aria-valuemax="0.28643"
                    aria-valuemin="0"
                    aria-valuenow="0.254"
                    class="peer absolute h-px w-px overflow-hidden whitespace-nowrap border-0 p-0 m-[-1px] [clip:rect(0,0,0,0)]"
                    max="0.28643"
                    min="0"
                    step="0.001"
                    tabindex="0"
                    type="range"
                    value="0.254"
                  />
                  <div
                    aria-hidden="true"
                    class="absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform cursor-grab peer-disabled:cursor-not-allowed peer-focus-visible:ring-1 peer-focus-visible:ring-black dark:peer-focus-visible:ring-white before:content-[''] before:absolute before:-inset-2 before:rounded-full"
                    data-testid="GradientSliderThumb"
                    style="left: calc(88.678% - 17.736px);"
                  />
                </div>
              </div>
              <div
                class="flex items-center"
                data-testid="NumericInput"
              >
                <input
                  aria-label="Chroma"
                  class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
                  type="text"
                  value="0.254"
                />
                <span
                  class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
                  style="visibility: hidden;"
                >
                  °
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-2"
              data-testid="HueSlider"
            >
              H
              <div
                class="flex-1 py-1"
              >
                <div
                  class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
                  style="background: linear-gradient(to right, oklch(0.7 0.4 0), oklch(0.7 0.4 60), oklch(0.7 0.4 120), oklch(0.7 0.4 180), oklch(0.7 0.4 240), oklch(0.7 0.4 300), oklch(0.7 0.4 0)); touch-action: none;"
                >
                  <input
                    aria-label="Hue"
                    aria-orientation="horizontal"
                    aria-valuemax="360"
                    aria-valuemin="0"
                    aria-valuenow="19.9"
                    class="peer absolute h-px w-px overflow-hidden whitespace-nowrap border-0 p-0 m-[-1px] [clip:rect(0,0,0,0)]"
                    max="360"
                    min="0"
                    step="0.01"
                    tabindex="0"
                    type="range"
                    value="19.9"
                  />
                  <div
                    aria-hidden="true"
                    class="absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform cursor-grab peer-disabled:cursor-not-allowed peer-focus-visible:ring-1 peer-focus-visible:ring-black dark:peer-focus-visible:ring-white before:content-[''] before:absolute before:-inset-2 before:rounded-full"
                    data-testid="GradientSliderThumb"
                    style="left: calc(5.528% - 1.106px);"
                  />
                </div>
              </div>
              <div
                class="flex items-center"
                data-testid="NumericInput"
              >
                <input
                  aria-label="Hue"
                  class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
                  type="text"
                  value="19.9"
                />
                <span
                  class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
                >
                  °
                </span>
              </div>
            </div>
          </div>
          <style>
            
      .popover-content-0 { background-color: oklch(63.27% 0.254 19.9); }
      .popover-base-0 {
        &:before {
          background-color: oklch(63.27% 0.254 19.9);
        }
       }
      
          </style>
          <div
            class="flex items-center justify-between"
          >
            <div
              class="flex items-center"
              data-testid="ModeSelector"
            >
              <button
                aria-label="Switch to OKLCH"
                aria-pressed="true"
                class="flex items-center justify-center outline-none hover:bg-black/15 dark:hover:bg-white/15 focus-visible:ring-2 focus:ring-black/30 dark:focus:ring-white/30 h-8 px-3 text-xs leading-none first:rounded-l-sm last:rounded-r-sm text-neutral-900 dark:text-neutral-50 focus-visible:relative focus-visible:z-10 bg-black/20 dark:bg-white/20"
                type="button"
              >
                OKLCH
              </button>
              <button
                aria-label="Switch to HSL"
                aria-pressed="false"
                class="flex items-center justify-center outline-none bg-black/10 dark:bg-white/10 hover:bg-black/15 dark:hover:bg-white/15 focus-visible:ring-2 focus:ring-black/30 dark:focus:ring-white/30 h-8 px-3 text-xs leading-none first:rounded-l-sm last:rounded-r-sm text-neutral-900 dark:text-neutral-50 focus-visible:relative focus-visible:z-10"
                type="button"
              >
                HSL
              </button>
              <button
                aria-label="Switch to RGB"
                aria-pressed="false"
                class="flex items-center justify-center outline-none bg-black/10 dark:bg-white/10 hover:bg-black/15 dark:hover:bg-white/15 focus-visible:ring-2 focus:ring-black/30 dark:focus:ring-white/30 h-8 px-3 text-xs leading-none first:rounded-l-sm last:rounded-r-sm text-neutral-900 dark:text-neutral-50 focus-visible:relative focus-visible:z-10"
                type="button"
              >
                RGB
              </button>
            </div>
            <div
              class="flex items-center gap-1"
            >
              <button
                aria-label="View Live Preview"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 h-8 text-small gap-2 rounded-medium px-0 min-w-8 w-8"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                <svg
                  class="text-lg"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 256 256"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M247.31,124.76c-.35-.79-8.82-19.58-27.65-38.41C194.57,61.26,162.88,48,128,48S61.43,61.26,36.34,86.35C17.51,105.18,9,124,8.69,124.76a8,8,0,0,0,0,6.5c.35.79,8.82,19.57,27.65,38.4C61.43,194.74,93.12,208,128,208s66.57-13.26,91.66-38.34c18.83-18.83,27.3-37.61,27.65-38.4A8,8,0,0,0,247.31,124.76ZM128,192c-30.78,0-57.67-11.19-79.93-33.25A133.47,133.47,0,0,1,25,128,133.33,133.33,0,0,1,48.07,97.25C70.33,75.19,97.22,64,128,64s57.67,11.19,79.93,33.25A133.46,133.46,0,0,1,231.05,128C223.84,141.46,192.43,192,128,192Zm0-112a48,48,0,1,0,48,48A48.05,48.05,0,0,0,128,80Zm0,80a32,32,0,1,1,32-32A32,32,0,0,1,128,160Z"
                  />
                </svg>
              </button>
              <button
                aria-label="Random color"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 min-w-8 w-8 h-8"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                <svg
                  class="text-base"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 256 256"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M224,48V96a8,8,0,0,1-8,8H168a8,8,0,0,1,0-16h28.69L182.06,73.37a79.56,79.56,0,0,0-56.13-23.43h-.45A79.52,79.52,0,0,0,69.59,72.71,8,8,0,0,1,58.41,61.27a96,96,0,0,1,135,.79L208,76.69V48a8,8,0,0,1,16,0ZM186.41,183.29a80,80,0,0,1-112.47-.66L59.31,168H88a8,8,0,0,0,0-16H40a8,8,0,0,0-8,8v48a8,8,0,0,0,16,0V179.31l14.63,14.63A95.43,95.43,0,0,0,130,222.06h.53a95.36,95.36,0,0,0,67.07-27.33,8,8,0,0,0-11.18-11.44Z"
                  />
                </svg>
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="dialog"
                aria-label="Change color options"
                class="group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 min-w-8 w-8 h-8 z-10 aria-expanded:scale-[0.97] aria-expanded:opacity-70 subpixel-antialiased"
                data-react-aria-pressable="true"
                data-slot="trigger"
                tabindex="0"
                type="button"
              >
                <span
                  class="size-8 inline-flex items-center justify-center"
                >
                  <div
                    class="relative inline-flex shrink-0"
                  >
                    <svg
                      class="text-base"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 256 256"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M40,88H73a32,32,0,0,0,62,0h81a8,8,0,0,0,0-16H135a32,32,0,0,0-62,0H40a8,8,0,0,0,0,16Zm64-24A16,16,0,1,1,88,80,16,16,0,0,1,104,64ZM216,168H199a32,32,0,0,0-62,0H40a8,8,0,0,0,0,16h97a32,32,0,0,0,62,0h17a8,8,0,0,0,0-16Zm-48,24a16,16,0,1,1,16-16A16,16,0,0,1,168,192Z"
                      />
                    </svg>
                    <span
                      class="flex z-10 flex-wrap absolute box-border rounded-full whitespace-nowrap place-content-center origin-center items-center select-none font-regular scale-100 opacity-100 subpixel-antialiased data-[invisible=true]:scale-0 data-[invisible=true]:opacity-0 transition-transform-opacity !ease-soft-spring !duration-300 border-transparent border-0 bg-secondary text-secondary-foreground top-[5%] right-[5%] translate-x-1/2 -translate-y-1/2 w-2.5 h-2.5 min-w-2.5 min-h-2.5"
                      data-invisible="true"
                    />
                  </div>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorItem > Render > renders correctly in RGB mode 1`] = `
<div>
  <div
    data-overlay-container="true"
  >
    <div
      aria-current="true"
      class="flex flex-col p-4 rounded-xl bg-default-100"
      data-testid="ColorItem"
      id="test-uuid-1"
      role="presentation"
    >
      <div
        class="flex items-start gap-2"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="Color picker"
          class="shrink-0 bg-(--gamut-bg-oklch) gamut-srgb:bg-(--gamut-bg-hex) size-16 rounded-large z-10 subpixel-antialiased aria-expanded:opacity-100 aria-expanded:scale-[1] cursor-pointer"
          data-color="oklch(63.27% 0.254 19.9)"
          data-react-aria-pressable="true"
          data-slot="trigger"
          data-testid="ColorBox"
          style="--gamut-bg-oklch: oklch(63.27% 0.254 19.9); --gamut-bg-hex: #ff0044;"
          tabindex="0"
          type="button"
        />
        <div
          class="w-full space-y-2"
        >
          <div
            class="flex items-center gap-1"
          >
            <div
              class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_8px)] is-filled"
              data-filled="true"
              data-filled-within="true"
              data-has-value="true"
              data-slot="base"
            >
              <div
                class="h-full flex flex-col"
                data-slot="main-wrapper"
              >
                <div
                  class="w-full inline-flex tap-highlight-transparent flex-row items-center gap-3 !px-1 !pb-0 !gap-0 relative box-border shadow-[0_1px_0px_0_rgba(0,0,0,0.05)] border-default-200 !rounded-none hover:border-default-300 after:content-[''] after:w-0 after:origin-center after:bg-default-foreground after:absolute after:left-1/2 after:-translate-x-1/2 after:-bottom-[2px] after:h-[2px] group-data-[focus=true]:after:w-full px-2 rounded-small transition-none h-6 min-h-6 is-filled"
                  data-slot="input-wrapper"
                  style="cursor: text;"
                >
                  <div
                    class="inline-flex w-full items-center h-full box-border pb-0"
                    data-slot="inner-wrapper"
                  >
                    <input
                      aria-label="Color name"
                      class="w-full bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text dark:autofill:[-webkit-text-fill-color:hsl(var(--heroui-foreground))] [&::-ms-reveal]:hidden transition-none group-data-[has-value=true]:text-foreground text-base font-semibold text-foreground-800 is-filled"
                      data-filled="true"
                      data-filled-within="true"
                      data-slot="input"
                      id="react-aria-_r_1t_"
                      name="color-name-0"
                      tabindex="0"
                      title=""
                      type="text"
                      value="Primary"
                    />
                  </div>
                </div>
              </div>
            </div>
            <button
              aria-label="Remove color"
              class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 h-6 text-tiny gap-1 rounded-small px-0 min-w-6 w-6"
              data-react-aria-pressable="true"
              tabindex="0"
              type="button"
            >
              <svg
                class="text-base"
                fill="currentColor"
                height="1em"
                viewBox="0 0 256 256"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M216,48H176V40a24,24,0,0,0-24-24H104A24,24,0,0,0,80,40v8H40a8,8,0,0,0,0,16h8V208a16,16,0,0,0,16,16H192a16,16,0,0,0,16-16V64h8a8,8,0,0,0,0-16ZM96,40a8,8,0,0,1,8-8h48a8,8,0,0,1,8,8v8H96Zm96,168H64V64H192ZM112,104v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Zm48,0v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Z"
                />
              </svg>
            </button>
          </div>
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
            data-filled="true"
            data-filled-within="true"
            data-has-value="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 group-data-[focus=true]:border-default-foreground group-data-[focus=true]:data-[hover=true]:border-default-foreground rounded-medium !duration-150 transition-colors motion-reduce:transition-none h-8 min-h-8 px-2 is-filled"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Color value"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text dark:autofill:[-webkit-text-fill-color:hsl(var(--heroui-foreground))] [&::-ms-reveal]:hidden text-small is-filled"
                    data-filled="true"
                    data-filled-within="true"
                    data-slot="input"
                    data-type="text"
                    id="react-aria-_r_24_"
                    tabindex="0"
                    title=""
                    type="text"
                    value="#ff0044"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="height: auto; opacity: 1;"
      >
        <div
          class="flex flex-col mt-3 gap-2"
        >
          <div
            class="flex flex-col gap-2"
            data-testid="ChannelSliders"
          >
            <div
              class="flex items-center gap-2"
              data-testid="RedSlider"
            >
              R
              <div
                class="flex-1 py-1"
              >
                <div
                  class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
                  style="background: linear-gradient(to right, rgb(0, 0, 0), rgb(255, 0, 0)); touch-action: none;"
                >
                  <input
                    aria-label="Red"
                    aria-orientation="horizontal"
                    aria-valuemax="255"
                    aria-valuemin="0"
                    aria-valuenow="255"
                    class="peer absolute h-px w-px overflow-hidden whitespace-nowrap border-0 p-0 m-[-1px] [clip:rect(0,0,0,0)]"
                    max="255"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="255"
                  />
                  <div
                    aria-hidden="true"
                    class="absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform cursor-grab peer-disabled:cursor-not-allowed peer-focus-visible:ring-1 peer-focus-visible:ring-black dark:peer-focus-visible:ring-white before:content-[''] before:absolute before:-inset-2 before:rounded-full"
                    data-testid="GradientSliderThumb"
                    style="left: calc(100% - 20px);"
                  />
                </div>
              </div>
              <div
                class="flex items-center"
                data-testid="NumericInput"
              >
                <input
                  aria-label="Red"
                  class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
                  type="text"
                  value="255"
                />
                <span
                  class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
                  style="visibility: hidden;"
                >
                  °
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-2"
              data-testid="GreenSlider"
            >
              G
              <div
                class="flex-1 py-1"
              >
                <div
                  class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
                  style="background: linear-gradient(to right, rgb(0, 0, 0), rgb(0, 255, 0)); touch-action: none;"
                >
                  <input
                    aria-label="Green"
                    aria-orientation="horizontal"
                    aria-valuemax="255"
                    aria-valuemin="0"
                    aria-valuenow="0"
                    class="peer absolute h-px w-px overflow-hidden whitespace-nowrap border-0 p-0 m-[-1px] [clip:rect(0,0,0,0)]"
                    max="255"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="0"
                  />
                  <div
                    aria-hidden="true"
                    class="absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform cursor-grab peer-disabled:cursor-not-allowed peer-focus-visible:ring-1 peer-focus-visible:ring-black dark:peer-focus-visible:ring-white before:content-[''] before:absolute before:-inset-2 before:rounded-full"
                    data-testid="GradientSliderThumb"
                    style="left: calc(0% - 0px);"
                  />
                </div>
              </div>
              <div
                class="flex items-center"
                data-testid="NumericInput"
              >
                <input
                  aria-label="Green"
                  class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
                  type="text"
                  value="0"
                />
                <span
                  class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
                  style="visibility: hidden;"
                >
                  °
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-2"
              data-testid="BlueSlider"
            >
              B
              <div
                class="flex-1 py-1"
              >
                <div
                  class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
                  style="background: linear-gradient(to right, rgb(0, 0, 0), rgb(0, 0, 255)); touch-action: none;"
                >
                  <input
                    aria-label="Blue"
                    aria-orientation="horizontal"
                    aria-valuemax="255"
                    aria-valuemin="0"
                    aria-valuenow="68"
                    class="peer absolute h-px w-px overflow-hidden whitespace-nowrap border-0 p-0 m-[-1px] [clip:rect(0,0,0,0)]"
                    max="255"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="68"
                  />
                  <div
                    aria-hidden="true"
                    class="absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform cursor-grab peer-disabled:cursor-not-allowed peer-focus-visible:ring-1 peer-focus-visible:ring-black dark:peer-focus-visible:ring-white before:content-[''] before:absolute before:-inset-2 before:rounded-full"
                    data-testid="GradientSliderThumb"
                    style="left: calc(26.667% - 5.333px);"
                  />
                </div>
              </div>
              <div
                class="flex items-center"
                data-testid="NumericInput"
              >
                <input
                  aria-label="Blue"
                  class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
                  type="text"
                  value="68"
                />
                <span
                  class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
                  style="visibility: hidden;"
                >
                  °
                </span>
              </div>
            </div>
          </div>
          <style>
            
      .popover-content-0 { background-color: oklch(63.27% 0.254 19.9); }
      .popover-base-0 {
        &:before {
          background-color: oklch(63.27% 0.254 19.9);
        }
       }
      
          </style>
          <div
            class="flex items-center justify-between"
          >
            <div
              class="flex items-center"
              data-testid="ModeSelector"
            >
              <button
                aria-label="Switch to OKLCH"
                aria-pressed="false"
                class="flex items-center justify-center outline-none bg-black/10 dark:bg-white/10 hover:bg-black/15 dark:hover:bg-white/15 focus-visible:ring-2 focus:ring-black/30 dark:focus:ring-white/30 h-8 px-3 text-xs leading-none first:rounded-l-sm last:rounded-r-sm text-neutral-900 dark:text-neutral-50 focus-visible:relative focus-visible:z-10"
                type="button"
              >
                OKLCH
              </button>
              <button
                aria-label="Switch to HSL"
                aria-pressed="false"
                class="flex items-center justify-center outline-none bg-black/10 dark:bg-white/10 hover:bg-black/15 dark:hover:bg-white/15 focus-visible:ring-2 focus:ring-black/30 dark:focus:ring-white/30 h-8 px-3 text-xs leading-none first:rounded-l-sm last:rounded-r-sm text-neutral-900 dark:text-neutral-50 focus-visible:relative focus-visible:z-10"
                type="button"
              >
                HSL
              </button>
              <button
                aria-label="Switch to RGB"
                aria-pressed="true"
                class="flex items-center justify-center outline-none hover:bg-black/15 dark:hover:bg-white/15 focus-visible:ring-2 focus:ring-black/30 dark:focus:ring-white/30 h-8 px-3 text-xs leading-none first:rounded-l-sm last:rounded-r-sm text-neutral-900 dark:text-neutral-50 focus-visible:relative focus-visible:z-10 bg-black/20 dark:bg-white/20"
                type="button"
              >
                RGB
              </button>
            </div>
            <div
              class="flex items-center gap-1"
            >
              <button
                aria-label="View Live Preview"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 h-8 text-small gap-2 rounded-medium px-0 min-w-8 w-8"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                <svg
                  class="text-lg"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 256 256"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M247.31,124.76c-.35-.79-8.82-19.58-27.65-38.41C194.57,61.26,162.88,48,128,48S61.43,61.26,36.34,86.35C17.51,105.18,9,124,8.69,124.76a8,8,0,0,0,0,6.5c.35.79,8.82,19.57,27.65,38.4C61.43,194.74,93.12,208,128,208s66.57-13.26,91.66-38.34c18.83-18.83,27.3-37.61,27.65-38.4A8,8,0,0,0,247.31,124.76ZM128,192c-30.78,0-57.67-11.19-79.93-33.25A133.47,133.47,0,0,1,25,128,133.33,133.33,0,0,1,48.07,97.25C70.33,75.19,97.22,64,128,64s57.67,11.19,79.93,33.25A133.46,133.46,0,0,1,231.05,128C223.84,141.46,192.43,192,128,192Zm0-112a48,48,0,1,0,48,48A48.05,48.05,0,0,0,128,80Zm0,80a32,32,0,1,1,32-32A32,32,0,0,1,128,160Z"
                  />
                </svg>
              </button>
              <button
                aria-label="Random color"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 min-w-8 w-8 h-8"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                <svg
                  class="text-base"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 256 256"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M224,48V96a8,8,0,0,1-8,8H168a8,8,0,0,1,0-16h28.69L182.06,73.37a79.56,79.56,0,0,0-56.13-23.43h-.45A79.52,79.52,0,0,0,69.59,72.71,8,8,0,0,1,58.41,61.27a96,96,0,0,1,135,.79L208,76.69V48a8,8,0,0,1,16,0ZM186.41,183.29a80,80,0,0,1-112.47-.66L59.31,168H88a8,8,0,0,0,0-16H40a8,8,0,0,0-8,8v48a8,8,0,0,0,16,0V179.31l14.63,14.63A95.43,95.43,0,0,0,130,222.06h.53a95.36,95.36,0,0,0,67.07-27.33,8,8,0,0,0-11.18-11.44Z"
                  />
                </svg>
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="dialog"
                aria-label="Change color options"
                class="group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 min-w-8 w-8 h-8 z-10 aria-expanded:scale-[0.97] aria-expanded:opacity-70 subpixel-antialiased"
                data-react-aria-pressable="true"
                data-slot="trigger"
                tabindex="0"
                type="button"
              >
                <span
                  class="size-8 inline-flex items-center justify-center"
                >
                  <div
                    class="relative inline-flex shrink-0"
                  >
                    <svg
                      class="text-base"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 256 256"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M40,88H73a32,32,0,0,0,62,0h81a8,8,0,0,0,0-16H135a32,32,0,0,0-62,0H40a8,8,0,0,0,0,16Zm64-24A16,16,0,1,1,88,80,16,16,0,0,1,104,64ZM216,168H199a32,32,0,0,0-62,0H40a8,8,0,0,0,0,16h97a32,32,0,0,0,62,0h17a8,8,0,0,0,0-16Zm-48,24a16,16,0,1,1,16-16A16,16,0,0,1,168,192Z"
                      />
                    </svg>
                    <span
                      class="flex z-10 flex-wrap absolute box-border rounded-full whitespace-nowrap place-content-center origin-center items-center select-none font-regular scale-100 opacity-100 subpixel-antialiased data-[invisible=true]:scale-0 data-[invisible=true]:opacity-0 transition-transform-opacity !ease-soft-spring !duration-300 border-transparent border-0 bg-secondary text-secondary-foreground top-[5%] right-[5%] translate-x-1/2 -translate-y-1/2 w-2.5 h-2.5 min-w-2.5 min-h-2.5"
                      data-invisible="true"
                    />
                  </div>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
